# engine

./: CMakeLists.txt  CMakePresets.json  ROADMAP.txt  unix-quickstart.sh  vcpkg.json
assets/maps/: map0.json
assets/shaders/: basic.frag.spv  basic.vert.spv  tile.frag.spv  tile.vert.spv  ui.vert.spv
assets/shaders/source/: basic.frag  basic.vert  compile_shaders.sh  tile.frag  tile.vert  ui.vert
assets/worlds/default/: actions.json  colliders.json  defaults.json  spaces.json  tiles.json  triggers.json  world.json
assets/worlds/default/scripts/: basic.lua
config/: settings.json
include/Program/: Application.hpp
include/Rendering/Resources/: PhysicalDevice.hpp
include/Rendering/Systems/: Instance.hpp
include/Windowing/Systems/: Instance.hpp  Window.hpp
include/app/: configuration.hpp  context.hpp  events.hpp  program.hpp  window.hpp
include/app/context/: glfw.hpp
include/app/window/: glfw.hpp
include/components/: action.hpp  buttons.hpp  camera.hpp  character.hpp  colliders.hpp  entity.hpp  entity_tags.hpp  proxy.hpp  space.hpp  tags.hpp  tile.hpp  transforms.hpp  trigger.hpp  world.hpp
include/data/: colour.hpp  extent.hpp  optional.hpp  position.hpp  range.hpp  rect.hpp  references.hpp  registry.hpp  sparse.hpp  tree.hpp  unique.hpp  version.hpp
include/engine/: character_manager.hpp  chunk.hpp  engine.hpp  engine_api.hpp  input_manager.hpp  renderer.hpp  settings.hpp  staging_manager.hpp  texture_manager.hpp  tile_mesh.hpp  tile_pool.hpp  world_generator.hpp
include/engine/components/: action.hpp  buttons.hpp  camera.hpp  character.hpp  colliders.hpp  controllers.hpp  defaults.hpp  entity_tags.hpp  proxy.hpp  space.hpp  tile.hpp  transforms.hpp  trigger.hpp  world.hpp
include/engine/systems/: buttons.hpp  camera.hpp  character.hpp  controllers.hpp  tile.hpp  transforms.hpp  world.hpp
include/filesystem/: file.hpp
include/game/: camera.hpp  character.hpp  controller.hpp  controllers.hpp  instance.hpp  map.hpp  mesh.hpp  physics.hpp  player.hpp  settings.hpp  tags.hpp  transforms.hpp
include/renderer/: buffer.hpp  command_buffer.hpp  command_pool.hpp  configuration.hpp  device.hpp  fence.hpp  framebuffer.hpp  image.hpp  image_view.hpp  instance.hpp  pipeline.hpp  queue.hpp  render_pass.hpp  renderer.hpp  sampler.hpp  semaphore.hpp  shader_module.hpp  surface.hpp  swapchain.hpp
include/renderer/commands/: buffer.hpp  pool.hpp  sync.hpp
include/renderer/resources/: buffer.hpp  config.hpp  fence.hpp  framebuffer.hpp  image.hpp  pass.hpp  pipeline.hpp  sampler.hpp  semaphore.hpp  shader.hpp
include/systems/: buttons.hpp  camera.hpp  character.hpp  controllers.hpp  entity.hpp  tile.hpp  transforms.hpp  world.hpp
include/world/: action.hpp  defaults.hpp  space.hpp  tile.hpp  world.hpp
scripts/: compile_shaders.py
source/Program/: Application.cpp  Main.cpp
source/Rendering/Systems/Instance/: Metal.mm  Vulkan.cpp
source/Windowing/Systems/: Instance.cpp  Window.cpp
source/app/: context.cpp  lifetime.cpp  main.cpp  program.cpp  window.cpp
source/app/context/: glfw.cpp
source/app/window/: glfw.cpp
source/engine/: allocator.cpp  chunk.cpp  engine.cpp  engine_api.cpp  input_manager.cpp  main.cpp  renderer.cpp  settings.cpp  staging_manager.cpp  tile_mesh.cpp  tile_pool.cpp  world_generator.cpp
source/engine/systems/: buttons.cpp  camera.cpp  character.cpp  controllers.cpp  tile.cpp  transforms.cpp  world.cpp
source/game/: camera.cpp  character.cpp  controller.cpp  controllers.cpp  instance.cpp  map.cpp  mesh.cpp  physics.cpp  player.cpp  settings.cpp  transforms.cpp
source/renderer/: buffer.cpp  command_buffer.cpp  command_pool.cpp  configuration.cpp  device.cpp  fence.cpp  framebuffer.cpp  image.cpp  image_view.cpp  instance.cpp  pipeline.cpp  queue.cpp  render_pass.cpp  renderer.cpp  sampler.cpp  semaphore.cpp  shader_module.cpp  surface.cpp  swapchain.cpp
source/renderer/commands/: buffer.cpp  pool.cpp  sync.cpp
source/renderer/resources/: buffer.cpp  config.cpp  fence.cpp  framebuffer.cpp  image.cpp  pass.cpp  pipeline.cpp  sampler.cpp  semaphore.cpp  shader.cpp
source/systems/: buttons.cpp  camera.cpp  character.cpp  controllers.cpp  entities.cpp  entity.cpp  tile.cpp  transforms.cpp  world.cpp
source/world/: tile.cpp  world.cpp
